--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
   <body>
     <h1>closed for a bit</h1>
     <p><a href="http://github.com/tweak">fork me</a> &nbsp; <a href="http://twitter.com/akhumphrey">tweet me</a> &nbsp; <a href="http://stackoverflow.com/users/284891">cred me</a> &nbsp; <a href="http://linkedin.com/in/akhumphrey">contact me</a></p>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-53599555-3', 'auto');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
