updated github link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <h1>closed for a bit</h1>
-    <p><a href="http://github.com/tweak">fork me</a> &nbsp; <a href="http://twitter.com/akhumphrey">tweet me</a> &nbsp; <a href="http://stackoverflow.com/users/284891">cred me</a> &nbsp; <a href="http://linkedin.com/in/akhumphrey">contact me</a></p>
+    <p><a href="https://github.com/akhumphrey">fork me</a> &nbsp; <a href="http://twitter.com/akhumphrey">tweet me</a> &nbsp; <a href="http://stackoverflow.com/users/284891">cred me</a> &nbsp; <a href="http://linkedin.com/in/akhumphrey">contact me</a></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
