removed old contact info

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
   </head>
   <body>
     <h1>closed for a bit</h1>
-    <p><a href="http://github.com/tweak">fork me</a> &nbsp; <a href="http://twitter.com/akhumphrey">tweet me</a> &nbsp; <a href="http://stackoverflow.com/users/284891">cred me</a> &nbsp; <a href="http://linkedin.com/in/akhumphrey">contact me</a></p>
+    <p><a href="http://github.com/tweak">fork me</a></p>
   </body>
 </html>
