--- a/index.html
+++ b/index.html
@@ -11,21 +11,24 @@
         color: #fff;
         text-align: center;
         margin: 10% 0 0;
+        font-size: 3rem;
       }
       p {
+        font-family: 'Trebuchet MS', sans-serif;
         text-align: center;
-        font-size: 0.9em;
+        font-size: 1.2rem;
+        color: #444;
       }
         a {
-          color: #555;
-          font-family: 'Trebuchet MS', sans-serif;
+          color: #444;
         }
         a:active,a:focus,a:hover{ color: #5dbaf6; }
     </style>
   </head>
   <body>
-    <h1>closed for a bit</h1>
-    <p><a href="http://github.com/akhumphrey">fork me</a></p>
+    <h1>ember devops</h1>
+    <p>keeping your services quietly smouldering away...</p>
+    <p><a href="http://github.com/akhumphrey">find us on github</a></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
