changed github user to match the new organisation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <h1>ember devops</h1>
     <p>keeping your services quietly smouldering away...</p>
-    <p><a href="http://github.com/akhumphrey">find us on github</a></p>
+    <p><a href="http://github.com/ember-devops">find us on github</a></p>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
