--- a/index.html
+++ b/index.html
@@ -1,41 +1,60 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>ember</title>
-    <meta charset="utf-8" />
-    <link href="http://fonts.googleapis.com/css?family=Montserrat+Alternates" rel="stylesheet" type="text/css">
-    <style type="text/css">
-      body { background: url(tile.png) repeat;}
-      h1 {
-        font-family: 'Montserrat Alternates', sans-serif;
-        color: #fff;
-        text-align: center;
-        margin: 10% 0 0;
-        font-size: 3rem;
-      }
-      p {
-        font-family: 'Trebuchet MS', sans-serif;
-        text-align: center;
-        font-size: 1.2rem;
-        color: #444;
-      }
-        a {
-          color: #444;
-        }
-        a:active,a:focus,a:hover{ color: #5dbaf6; }
-    </style>
-  </head>
-  <body>
-    <h1>ember devops</h1>
-    <p>keeping your services quietly smouldering away...</p>
-    <p><a href="http://github.com/ember-devops">find us on github</a></p>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-67161904-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </body>
+<!DOCTYPE HTML>
+<html lang="en" >
+    <head>
+        <meta charset="utf-8">
+        <title>Adrian Humphrey &middot; Wellington, New Zealand</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="I like code and the word galumph."/>
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Adrian Humphrey &middot; Wellington, New Zealand" />
+        <meta property="og:description" content="I like code and the word galumph." />
+        <meta property="og:url" content="http://ember.co.nz/" />
+        <meta property="og:site_name" content="Adrian Humphrey" />
+        <meta name="twitter:card" content="summary" />
+        <meta name="twitter:description" content="I like code and the word galumph." />
+        <meta name="twitter:title" content="Adrian Humphrey &middot; Wellington, New Zealand" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style.css" media="all" />
+    </head>
+    <body>
+        <div class="wrapper">
+            <h1>
+                <strong>Adrian Humphrey</strong>
+                <span class="hide"> &middot; </span>
+                <small><a href="http://www.google.co.nz/search?q=windiest+city+in+the+world" target="_blank">Wellington</a>,&nbsp;New&nbsp;Zealand</small>
+            </h1>
+
+            <ul class="skills">
+                <li>code monkey</li>
+                <li>sysadmin</li>
+                <li>ops nerd</li>
+                <li>sql whizz</li>
+            </ul>
+
+            <h2>
+                chief&nbsp;jack&nbsp;of&nbsp;all&nbsp;trades&nbsp;at&nbsp;<a class="logo" href="https://github.com/ember-devops" target="_blank"><img src="logo.png" alt="ember devops" height="36" />ember&nbsp;devops</a>,<br />
+                afficianado&nbsp;of&nbsp;the&nbsp;<a href="https://github.com/akhumphrey" target="_blank">portmanteau</a>,<br />
+                enthusiastic&nbsp;wearer&nbsp;of&nbsp;<a href="https://en.wikipedia.org/wiki/Flip-flops" target="_blank">jandals</a>.
+            </h2>
+
+            <footer>
+                <p>
+                    <strong><a href="mailto:hello@ember.co.nz">say hello</a></strong> and let's geek out about
+                    <ul class="skills inline">
+                        <li>naming things and cache invalidation</li>
+                        <li>maximising fault tolerance</li>
+                        <li>build deployment and test coverage</li>
+                        <li>optimising correlated subqueries</li>
+                    </ul>
+                </p>
+            </footer>
+        </div>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-67161904-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-67161904-1');
+        </script>
+    </body>
 </html>
