--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <h2>
                 chief&nbsp;jack&nbsp;of&nbsp;all&nbsp;trades&nbsp;at&nbsp;<a class="logo" href="https://github.com/ember-devops" target="_blank"><img src="logo.png" alt="ember devops" height="36" />ember&nbsp;devops</a>,<br />
-                afficianado&nbsp;of&nbsp;the&nbsp;<a href="https://github.com/akhumphrey" target="_blank">portmanteau</a>,<br />
+                afficianado&nbsp;of&nbsp;the&nbsp;<a href="https://en.wikipedia.org/wiki/List_of_portmanteaus" target="_blank">portmanteau</a>,<br />
                 enthusiastic&nbsp;wearer&nbsp;of&nbsp;<a href="https://en.wikipedia.org/wiki/Flip-flops" target="_blank">jandals</a>.
             </h2>
 
