--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="twitter:title" content="Adrian Humphrey &middot; Wellington, New Zealand" />
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css" media="all" />
+        <link rel="icon" type="image/png" href="favicon.png" />
     </head>
     <body>
         <div class="wrapper">
