further styling tweaks

--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
             </h2>
 
             <footer>
-                <p>
-                    <strong><a href="mailto:hello@ember.co.nz">say hello</a></strong> and let's geek out about
-                    <ul class="skills inline">
-                        <li>naming things and cache invalidation</li>
-                        <li>maximising fault tolerance</li>
-                        <li>build deployment and test coverage</li>
-                        <li>optimising correlated subqueries</li>
-                    </ul>
-                </p>
+                <p><strong><a href="mailto:hello@ember.co.nz">say hello</a></strong> and let's geek out about</p>
+                <ul class="skills inline">
+                    <li>naming things and cache invalidation</li>
+                    <li>maximising fault tolerance</li>
+                    <li>build deployment and test coverage</li>
+                    <li>optimising correlated subqueries</li>
+                </ul>
             </footer>
         </div>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-67161904-1"></script>
