--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>
                 <strong>Adrian Humphrey</strong>
                 <span class="hide"> &middot; </span>
-                <small><a href="http://www.google.co.nz/search?q=windiest+city+in+the+world" target="_blank">Wellington</a>,&nbsp;New&nbsp;Zealand</small>
+                <small><a href="https://goo.gl/maps/TgfBRsCgwxK2" target="_blank">Tauranga,&nbsp;New&nbsp;Zealand</small>
             </h1>
 
             <ul class="skills">
