the end of the anchor might help

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>
                 <strong>Adrian Humphrey</strong>
                 <span class="hide"> &middot; </span>
-                <small><a href="https://goo.gl/maps/TgfBRsCgwxK2" target="_blank">Tauranga,&nbsp;New&nbsp;Zealand</small>
+                <small><a href="https://goo.gl/maps/TgfBRsCgwxK2" target="_blank">Tauranga,&nbsp;New&nbsp;Zealand</a></small>
             </h1>
 
             <ul class="skills">
