corrected location in head, modified ops skill

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en" >
     <head>
         <meta charset="utf-8">
-        <title>Adrian Humphrey &middot; Wellington, New Zealand</title>
+        <title>Adrian Humphrey &middot; Tauranga, New Zealand</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="I like code and the word galumph."/>
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Adrian Humphrey &middot; Wellington, New Zealand" />
+        <meta property="og:title" content="Adrian Humphrey &middot; Tauranga, New Zealand" />
         <meta property="og:description" content="I like code and the word galumph." />
         <meta property="og:url" content="http://ember.co.nz/" />
         <meta property="og:site_name" content="Adrian Humphrey" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:description" content="I like code and the word galumph." />
-        <meta name="twitter:title" content="Adrian Humphrey &middot; Wellington, New Zealand" />
+        <meta name="twitter:title" content="Adrian Humphrey &middot; Tauranga, New Zealand" />
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css" media="all" />
         <link rel="icon" type="image/png" href="favicon.png" />
@@ -43,7 +43,7 @@
                 <ul class="skills inline">
                     <li>naming things and cache invalidation</li>
                     <li>maximising fault tolerance</li>
-                    <li>build deployment and test coverage</li>
+                    <li>build deployment and orchestration</li>
                     <li>optimising correlated subqueries</li>
                 </ul>
             </footer>
