--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="wrapper">
             <h1>
-                <strong>Adrian Humphrey</strong>
+                <strong>Adrian Humphrey <small class="pronouns">he/him</small></strong>
                 <span class="hide"> &middot; </span>
                 <small><a href="https://goo.gl/maps/TgfBRsCgwxK2" target="_blank">Tauranga,&nbsp;New&nbsp;Zealand</a></small>
             </h1>
